[BACKEND] Create card route
